Fix hotkey labels in dark mode.

--- a/src/components/ColorPicker/ColorPicker.scss
+++ b/src/components/ColorPicker/ColorPicker.scss
@@ -109,7 +109,7 @@
     position: absolute;
     right: 4px;
     bottom: 4px;
-    filter: var(--theme-filter);
+    filter: none;
     font-size: 0.75rem;
   }
 
